# opyl

./: .gitignore  _sample.opal  new_parse.py  new_types.py  opal.py  pyproject.toml  readme.md  result.py  runtime.opal  sample.opal  transpilation_example.c  type_system.md
.github/workflows/: pytest.yml
examples/: hello.opal  lex_errors.opal  parse_errors.opal  playground.opal  sample_struct.opal
opyl/: __init__.py  __main__.py  opyl.py
opyl/combinator/: combinators.py  parsers.py
opyl/compile/: __init__.py  analyze.py  ast.py  bob_pratt.py  c_ast.py  chumsky.py  combinators.py  compile.py  error.py  errors.py  expr.py  expression.py  generate.py  lex.py  lexemes.py  new_parse.py  node.py  nodes.py  parse.py  positioning.py  pratt.py  stream.py  symbol.py  symbols.py  token.py  tokens.py  tuple.py  typecheck.py  typed_expr.py  types.py  variadic.py
opyl/console/: color.py
opyl/driver/: command_line.py
opyl/io/: error.py  file.py
opyl/support/: _monad.py  atoms.py  combinator.py  monad.py  monads.py  recovery.py  span.py  split_monad.py  stream.py  streams.py  union.py  unions.py
opyl/support/brainfuck/: bf.py
opyl/support/json/: json.py  parser.py
tests/: _test_parse.py  test_analyze.py  test_integrated.py  test_lex.py  test_opyl.py  test_parse.py  test_pratt.py  test_support.py  utils.py
tests/compile/: ____test_combinators.py  test_combinators.py  test_expression.py  test_lex.py  test_new_parse.py  test_parse.py
tests/test_cases/: const_decl.opal  empty_enum_decl.opal  empty_struct_decl.opal  empty_trait_decl.opal  enum_multi_member.opal  enum_single_member.opal  func_with_empty_return.opal  func_with_empty_when.opal  func_with_for.opal  func_with_for_with_break.opal  func_with_for_with_continue.opal  func_with_if.opal  func_with_if_else.opal  func_with_return.opal  func_with_when_as.opal  func_with_when_is_arm.opal  func_with_when_multi_is.opal  func_with_while.opal  mut_var_decl.opal  non_mut_var_decl.opal  non_void_func_def.opal  non_void_func_def_with_multi_param.opal  non_void_func_def_with_param.opal  struct_with_field.opal  struct_with_field_method.opal  struct_with_method.opal  struct_with_multi_field.opal  struct_with_multi_method.opal  trait_with_one_method.opal  type_def.opal
