[tool.poetry]
name = "opyl"
version = "0.1.0"
description = "Opal bytecode compiler and interpreter in Python"
authors = ["bwburnsides <19192452+bwburnsides@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
black = "^23.9.1"
mypy = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
